Add admin evacuation point management
